<resources>
    <string name="com_facebook_image_download_unknown_error">Unexpected error while downloading an image.</string>
    <string name="com_facebook_internet_permission_error_message">WebView login requires INTERNET permission</string>
    <string name="com_facebook_internet_permission_error_title">AndroidManifest Error</string>
    <string name="com_facebook_like_button_liked">Liked</string>
    <string name="com_facebook_like_button_not_liked">Like</string>
    <string name="com_facebook_loading">Loading...</string>
    <string name="com_facebook_loginview_cancel_action">Cancel</string>
    <string name="com_facebook_loginview_log_in_button">Log in</string>
    <string name="com_facebook_loginview_log_in_button_long">Log in with Facebook</string>
    <string name="com_facebook_loginview_log_out_action">Log out</string>
    <string name="com_facebook_loginview_log_out_button">Log out</string>
    <string name="com_facebook_loginview_logged_in_as">Logged in as: %1$s</string>
    <string name="com_facebook_loginview_logged_in_using_facebook">Logged in using Facebook</string>
    <string name="com_facebook_send_button_text">Send</string>
    <string name="com_facebook_share_button_text">Share</string>
    <string name="com_facebook_tooltip_default">"New! You're in control - choose what info you want to share with apps."</string>
    <string name="messenger_send_button_text">Send</string>
    <string name="auth_client_needs_enabling_title">An application requires Google Play Services to be enabled.</string>
    <string name="auth_client_needs_installation_title">An application requires installation of Google Play Services.</string>
    <string name="auth_client_needs_update_title">An application requires an update for Google Play Services.</string>
    <string name="auth_client_play_services_err_notification_msg">Google Play services error</string>
    <string name="auth_client_requested_by_msg">Requested by %1$s</string>
    <string name="auth_client_using_bad_version_title">An application attempted to use a bad version of Google Play Services.</string>
    <string name="common_google_play_services_enable_button">Enable Google Play services</string>
    <string name="common_google_play_services_enable_text">"This app won't work unless you enable Google Play services."</string>
    <string name="common_google_play_services_enable_title">Enable Google Play services</string>
    <string name="common_google_play_services_install_button">Get Google Play services</string>
    <string name="common_google_play_services_install_text_phone">"This app won't run without Google Play services, which are missing from your phone."</string>
    <string name="common_google_play_services_install_text_tablet">"This app won't run without Google Play services, which are missing from your tablet."</string>
    <string name="common_google_play_services_install_title">Get Google Play services</string>
    <string name="common_google_play_services_invalid_account_text">The specified account does not exist on this device. Please choose a different account.</string>
    <string name="common_google_play_services_invalid_account_title">Invalid Account</string>
    <string name="common_google_play_services_network_error_text">A data connection is required to connect to Google Play services.</string>
    <string name="common_google_play_services_network_error_title">Network Error</string>
    <string name="common_google_play_services_unknown_issue">Unknown issue with Google Play services.</string>
    <string name="common_google_play_services_unsupported_date_text">The date on the device appears to be incorrect. Please check the date on the device.</string>
    <string name="common_google_play_services_unsupported_text">Google Play services, which some of your applications rely on, is not supported by your device. Please contact the manufacturer for assistance.</string>
    <string name="common_google_play_services_unsupported_title">Google Play services</string>
    <string name="common_google_play_services_update_button">Update</string>
    <string name="common_google_play_services_update_text">"This app won't run unless you update Google Play services."</string>
    <string name="common_google_play_services_update_title">Update Google Play services</string>
    <string name="common_signin_button_text">Sign in</string>
    <string name="common_signin_button_text_long">Sign in with Google</string>
    <string name="about">About</string>
    <string name="about_poshmark">About Poshmark</string>
    <string name="above">Above</string>
    <string name="account_created">Your account has been created.</string>
    <string name="action_settings">Settings</string>
    <string name="add_comment_you_want_to_post">Please add a comment you want to post.</string>
    <string name="add_credit_card">Add Credit Card</string>
    <string name="add_custom_option">Add Custom Option</string>
    <string name="add_items_to_bundle">Add items from @%s →</string>
    <string name="add_message">Add a message</string>
    <string name="add_more_items_to_bundle">Add more items from @%s →</string>
    <string name="add_photo">ADD PHOTO</string>
    <string name="add_to_bundle">Add To Bundle</string>
    <string name="adding_to_bundle">Adding to bundle...</string>
    <string name="address_we_found">ADDRESS WE FOUND</string>
    <string name="address_you_entered">ADDRESS YOU ENTERED</string>
    <string name="admin_actions">Admin Actions</string>
    <string name="all">All</string>
    <string name="all_brands">All</string>
    <string name="all_categories">All Categories</string>
    <string name="all_colors">All Colors</string>
    <string name="all_items">All Items</string>
    <string name="amex">American Express</string>
    <string name="appCommand">app_command</string>
    <string name="app_feedback_alert_msg">Please help us improve by sending us feedback to support@poshmark.com</string>
    <string name="app_name">Poshmark</string>
    <string name="app_rate_info">"If you love Poshmark, would you mind taking a moment to rate it? It won't take more than a minute. Thanks for your support!"</string>
    <string name="app_rate_option_dismiss">No thanks</string>
    <string name="app_rate_option_rate_now">Rate Poshmark</string>
    <string name="app_rate_option_remind_me_later">Remind me later</string>
    <string name="app_rate_title">Rate Poshmark</string>
    <string name="apply">Apply</string>
    <string name="at">at</string>
    <string name="authority">com.poshmark.app.PMBrandsContentProvider</string>
    <string name="auto">Auto</string>
    <string name="availability">Availability</string>
    <string name="available">Available</string>
    <string name="available_filter_label">Available</string>
    <string name="below">Below</string>
    <string name="billing_address">Billing Address</string>
    <string name="billing_same_as_shipping">Same as shipping address</string>
    <string name="block_user">Block User</string>
    <string name="branch_app_key">key_live_nlluzKlFN7wzrkZXRG83zklgjbfSurdH</string>
    <string name="brand">Brand</string>
    <string name="brand_email_share_body"><Data>" &lt;div>&lt;p>Hi there!&lt;/p>&lt;p>Join me to shop &lt;a href=%2$s>%3$s&lt;/a> &amp; other designers for up to 70%% off retail on Poshmark:&lt;/p>&lt;p>&lt;a href=%2$s>&lt;img src='%1$s' width='100px' style='margin-right:10px;'>&lt;/a>&lt;/p>&lt;/div>&lt;p>-%4$s&lt;/p> "</Data></string>
    <string name="brand_email_share_subject">%1$s and more for up to 70%% off on Poshmark</string>
    <string name="brand_facebook_share">Join me to shop %1$s for up to 70%% off retail</string>
    <string name="brand_pinterest_share_description">Join me to shop %1$s for up to 70%% off retail on Poshmark: %2$s</string>
    <string name="brand_share_banner_button_title">Spread the love</string>
    <string name="brand_share_banner_message">"Let your friends know how you're saving up to 70%% off retail for %s."</string>
    <string name="brand_share_banner_title">Share with your friends</string>
    <string name="brand_sms_share_message">Join me to shop %1$s &amp; other designers for up to 70%% off retail on Poshmark: %2$s</string>
    <string name="card_number">Card Number</string>
    <string name="category">Category</string>
    <string name="city">City</string>
    <string name="color">Color</string>
    <string name="congrats">CONGRATS!</string>
    <string name="current_password">Current password</string>
    <string name="details">DETAILS</string>
    <string name="email_username_label">Username/email</string>
    <string name="expiration">Expiration</string>
    <string name="first_time_offer_msg">Woohoo, your first offer!</string>
    <string name="first_time_offer_msg_link">Why do we need this?</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="got_it">Got it!</string>
    <string name="invalid_card_number">- Invalid card number.</string>
    <string name="invalid_city">- Invalid city.</string>
    <string name="invalid_current_password">- The current password you entered is not correct.</string>
    <string name="invalid_expiration_date">- Invalid expiration date.</string>
    <string name="invalid_name">- Invalid name.</string>
    <string name="invalid_security_code">- Invalid security code.</string>
    <string name="invalid_state">- Invalid state.</string>
    <string name="invalid_street">- Invalid street.</string>
    <string name="invalid_zip">- Invalid zip.</string>
    <string name="listing_delete">Delete Listing</string>
    <string name="listing_description_hint">Describe it... (required)</string>
    <string name="listing_price">Listing Price</string>
    <string name="listing_title_hint">What are you selling? (required)</string>
    <string name="login">Login</string>
    <string name="login_invalid_password">- Enter a valid password.</string>
    <string name="login_invalid_username">- Enter a valid username/email.</string>
    <string name="mm_yy">MM/YY</string>
    <string name="name">Name</string>
    <string name="new_password">New password</string>
    <string name="new_password_copy">Re-enter new password</string>
    <string name="new_password_too_short_error">- Your new password needs to be at least 6 characters long.</string>
    <string name="new_w_tags">New W/Tags</string>
    <string name="offers_info_txt">To quickly process this and future offers when they are accepted, we need your shipping and payment information on file.</string>
    <string name="optional">optional</string>
    <string name="original_price">Original Price</string>
    <string name="password">Password</string>
    <string name="payment">PAYMENT</string>
    <string name="phone">Phone</string>
    <string name="pin_listings_comment1">&lt;b>Pin your listings&lt;/b> for maximum reach and exposure. (Hello, sales!)</string>
    <string name="pin_listings_comment2">&lt;b>Pin others’ listings&lt;/b> when you share items you love on Poshmark</string>
    <string name="price_caps">PRICE</string>
    <string name="required">required</string>
    <string name="secure_checkout">Secure Checkout</string>
    <string name="security_code">Security Code</string>
    <string name="ship_to">SHIP TO</string>
    <string name="size">Size</string>
    <string name="state">State</string>
    <string name="street">Street</string>
    <string name="street2">Street 2</string>
    <string name="view_poshmark_seller_fee_policy">"View Poshmark's Seller fee policy"</string>
    <string name="way_to_selling_success">You are on the way to selling success</string>
    <string name="you_can_change_in_sharing_settings">You can change your settings at any time from your \"Sharing Settings\" page.</string>
    <string name="you_can_now">You can now:</string>
    <string name="your_earnings_when_sold">"Your Earnings
(when sold)"</string>
    <string name="zip">Zip</string>
</resources>