<?xml version="1.0" encoding="utf-8"?>
<LinearLayout style="@style/formSectionLayout"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:custom="http://schemas.android.com/apk/res-auto">
    <com.poshmark.ui.customviews.LabelledEditText android:id="@id/shippingNameEditText" android:hint="@string/required" android:inputType="textPersonName|textCapWords" custom:label="@string/name" custom:fontName="fonts/ProximaNova_Sbold.ttf" custom:required="true" custom:mode="userName" custom:message="@string/invalid_name" style="@style/formEditText" />
    <com.poshmark.ui.customviews.LabelledEditText android:id="@id/shippingStreetEditText" android:hint="@string/required" android:inputType="textCapWords" custom:label="@string/street" custom:fontName="fonts/ProximaNova_Sbold.ttf" custom:required="true" custom:message="@string/invalid_street" style="@style/formEditText" />
    <com.poshmark.ui.customviews.LabelledEditText android:id="@id/shippingStreet2EditText" android:hint="@string/optional" android:inputType="textCapWords" custom:label="@string/street2" custom:fontName="fonts/ProximaNova_Sbold.ttf" style="@style/formEditText" />
    <com.poshmark.ui.customviews.LabelledEditText android:id="@id/shippingCityEditText" android:hint="@string/required" android:inputType="textCapWords" custom:label="@string/city" custom:fontName="fonts/ProximaNova_Sbold.ttf" custom:required="true" custom:mode="simpleNoSpace" custom:message="@string/invalid_city" style="@style/formEditText" />
    <com.poshmark.ui.customviews.LabelledEditText android:id="@id/shippingStateEditText" android:hint="@string/required" custom:label="@string/state" custom:fontName="fonts/ProximaNova_Sbold.ttf" custom:required="true" custom:message="@string/invalid_state" style="@style/formEditText" />
    <com.poshmark.ui.customviews.LabelledEditText android:id="@id/shippingZipEditText" android:hint="@string/required" android:inputType="phone" custom:label="@string/zip" custom:fontName="fonts/ProximaNova_Sbold.ttf" custom:required="true" custom:mode="zipcode" custom:message="@string/invalid_zip" style="@style/formEditText" />
    <com.poshmark.ui.customviews.LabelledEditText android:id="@id/shippingPhoneEditText" android:hint="@string/optional" android:inputType="phone" custom:label="@string/phone" custom:fontName="fonts/ProximaNova_Sbold.ttf" style="@style/formEditText" />
</LinearLayout>