<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:background="@drawable/bg_fragment" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:custom="http://schemas.android.com/apk/res-auto">
    <LinearLayout style="@style/formSectionLayout">
        <com.poshmark.ui.customviews.LabelledEditText android:id="@id/cardNumberEditText" android:hint="@string/required" android:maxLength="20" android:inputType="numberDecimal" custom:label="@string/card_number" custom:fontName="fonts/ProximaNova_Sbold.ttf" custom:required="true" custom:mode="creditcard" custom:message="@string/invalid_card_number" style="@style/formEditText" />
        <com.poshmark.ui.customviews.LabelledEditText android:id="@id/expirationEditText" android:hint="@string/mm_yy" custom:label="@string/expiration" custom:fontName="fonts/ProximaNova_Sbold.ttf" custom:required="true" custom:message="@string/invalid_expiration_date" style="@style/formEditText" />
        <com.poshmark.ui.customviews.LabelledEditText android:id="@id/securityCodeEditText" android:hint="@string/required" android:inputType="phone" custom:label="@string/security_code" custom:fontName="fonts/ProximaNova_Sbold.ttf" custom:required="true" custom:message="@string/invalid_security_code" style="@style/formEditText" />
        <LinearLayout android:orientation="horizontal" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginBottom="10.0dip">
            <com.poshmark.ui.customviews.PMTextView android:textSize="13.0sp" android:textColor="@color/textColorGray" android:paddingLeft="15.0dip" android:layout_width="115.0dip" android:layout_height="wrap_content" android:text="@string/billing_address" custom:fontName="fonts/ProximaNova_Reg.ttf" />
            <CheckBox android:textSize="13.0sp" android:textColor="@color/textColorDarkGray" android:id="@id/billingCheckbox" android:layout_width="wrap_content" android:layout_height="wrap_content" android:checked="true" android:text="@string/billing_same_as_shipping" />
        </LinearLayout>
        <LinearLayout android:orientation="vertical" android:id="@id/billingAddressLayout" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <com.poshmark.ui.customviews.LabelledEditText android:id="@id/billingNameEditText" android:hint="@string/required" android:inputType="textPersonName|textCapWords" custom:label="@string/name" custom:fontName="fonts/ProximaNova_Sbold.ttf" custom:required="true" custom:mode="userName" custom:message="@string/invalid_name" style="@style/formEditText" />
            <com.poshmark.ui.customviews.LabelledEditText android:id="@id/billingStreetEditText" android:hint="@string/required" android:inputType="textCapWords" custom:label="@string/street" custom:fontName="fonts/ProximaNova_Sbold.ttf" custom:required="true" custom:message="@string/invalid_street" style="@style/formEditText" />
            <com.poshmark.ui.customviews.LabelledEditText android:id="@id/billingStreet2EditText" android:hint="@string/optional" android:inputType="textCapWords" custom:label="@string/street2" custom:fontName="fonts/ProximaNova_Sbold.ttf" style="@style/formEditText" />
            <com.poshmark.ui.customviews.LabelledEditText android:id="@id/billingCityEditText" android:hint="@string/required" android:inputType="textCapWords" custom:label="@string/city" custom:fontName="fonts/ProximaNova_Sbold.ttf" custom:required="true" custom:mode="simpleNoSpace" custom:message="@string/invalid_city" style="@style/formEditText" />
            <com.poshmark.ui.customviews.LabelledEditText android:id="@id/billingStateEditText" android:hint="@string/required" custom:label="@string/state" custom:fontName="fonts/ProximaNova_Sbold.ttf" custom:required="true" custom:message="@string/invalid_state" style="@style/formEditText" />
            <com.poshmark.ui.customviews.LabelledEditText android:id="@id/billingZipEditText" android:hint="@string/required" android:inputType="phone" custom:label="@string/zip" custom:fontName="fonts/ProximaNova_Sbold.ttf" custom:required="true" custom:mode="zipcode" custom:message="@string/invalid_zip" style="@style/formEditText" />
            <com.poshmark.ui.customviews.LabelledEditText android:id="@id/billingPhoneEditText" android:hint="@string/optional" android:inputType="phone" custom:label="@string/phone" custom:fontName="fonts/ProximaNova_Sbold.ttf" style="@style/formEditText" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>