<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:orientation="vertical" android:id="@id/scrollView" android:padding="0.0dip" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_margin="0.0dip"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:custom="http://schemas.android.com/apk/res-auto">
    <LinearLayout android:orientation="vertical" android:background="@drawable/bg_fragment" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <include android:id="@id/listingEditorPicturesSelector" layout="@layout/listing_editor_pictures_selector" />
        <com.poshmark.ui.customviews.PMTextView android:id="@id/detailsTextView" android:text="@string/details" custom:fontName="fonts/ProximaNova_Sbold.ttf" style="@style/formSectionTitle" />
        <LinearLayout style="@style/formSectionLayout">
            <com.poshmark.ui.customviews.PMEditText android:id="@id/listingTitle" android:hint="@string/listing_title_hint" android:maxLines="1" android:maxLength="50" android:inputType="textCapSentences" custom:fontName="fonts/ProximaNova_Sbold.ttf" style="@style/formEditText" />
            <com.poshmark.ui.customviews.PMEditText android:id="@id/listingDescription" android:layout_marginBottom="25.0dip" android:hint="@string/listing_description_hint" android:maxLength="500" android:inputType="textCapSentences|textMultiLine" custom:fontName="fonts/ProximaNova_Sbold.ttf" style="@style/formEditText" />
            <com.poshmark.ui.customviews.LabelledEditText android:id="@id/categoryEditText" android:hint="@string/required" custom:label="@string/category" custom:fontName="fonts/ProximaNova_Sbold.ttf" style="@style/formEditText" />
            <com.poshmark.ui.customviews.LabelledEditText android:id="@id/sizeEditText" android:hint="@string/required" custom:label="@string/size" custom:fontName="fonts/ProximaNova_Sbold.ttf" style="@style/formEditText" />
            <com.poshmark.ui.customviews.LabelledEditText android:id="@id/brandEditText" android:hint="@string/optional" custom:label="@string/brand" custom:fontName="fonts/ProximaNova_Sbold.ttf" style="@style/formEditText" />
            <FrameLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content">
                <com.poshmark.ui.customviews.LabelledEditText android:id="@id/colorDummyEditText" android:layout_marginTop="8.0dip" android:hint="@string/optional" custom:label="@string/color" custom:fontName="fonts/ProximaNova_Sbold.ttf" style="@style/formEditText" />
                <com.poshmark.ui.customviews.ColorSelectionView android:orientation="horizontal" android:id="@id/colorImageContainer" android:background="@color/bgColorWhite" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="110.0dip" android:layout_marginTop="3.0dip" />
            </FrameLayout>
            <com.poshmark.ui.customviews.LabelledEditText android:id="@id/nwtEditText" android:hint="@string/optional" custom:label="@string/new_w_tags" custom:fontName="fonts/ProximaNova_Sbold.ttf" style="@style/formEditText" />
        </LinearLayout>
        <com.poshmark.ui.customviews.PMTextView android:id="@id/priceTextView" android:text="@string/price_caps" custom:fontName="fonts/ProximaNova_Sbold.ttf" style="@style/formSectionTitle" />
        <LinearLayout style="@style/formSectionLayout">
            <com.poshmark.ui.customviews.LabelledEditText android:id="@id/originalPriceEditText" android:hint="@string/required" android:inputType="number" custom:label="@string/original_price" custom:fontName="fonts/ProximaNova_Sbold.ttf" custom:required="true" style="@style/formEditText" />
            <com.poshmark.ui.customviews.LabelledEditText android:id="@id/listingPriceEditText" android:hint="@string/required" android:inputType="number" custom:label="@string/listing_price" custom:fontName="fonts/ProximaNova_Sbold.ttf" custom:required="true" style="@style/formEditText" />
            <LinearLayout android:orientation="horizontal" android:background="@color/bgColorGray" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="10.0dip" android:layout_marginTop="0.0dip" android:layout_marginRight="10.0dip" android:layout_marginBottom="18.0dip">
                <com.poshmark.ui.customviews.PMTextView android:textSize="14.0sp" android:textColor="@color/textColorGray" android:paddingBottom="2.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_margin="5.0dip" android:text="@string/your_earnings_when_sold" custom:fontName="fonts/ProximaNova_Sbold.ttf" />
                <com.poshmark.ui.customviews.PMTextView android:textSize="15.0sp" android:textColor="@color/textColorGray" android:id="@id/earningsTextView" android:paddingLeft="5.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_margin="5.0dip" android:text="$" custom:fontName="fonts/ProximaNova_Sbold.ttf" />
            </LinearLayout>
        </LinearLayout>
        <LinearLayout android:id="@id/availabilitySectionLayout" style="@style/formSectionLayout">
            <com.poshmark.ui.customviews.LabelledEditText android:id="@id/nfsEditText" android:hint="@string/optional" custom:label="@string/availability" custom:fontName="fonts/ProximaNova_Sbold.ttf" style="@style/formEditText" />
        </LinearLayout>
        <LinearLayout android:id="@id/deleteButtonSectionLayout" android:background="@android:color/transparent" android:paddingTop="10.0dip" style="@style/formSectionLayout">
            <com.poshmark.ui.customviews.PMButton android:textSize="14.0sp" android:textStyle="bold" android:textColor="@color/button_white_text" android:layout_gravity="center_horizontal" android:id="@id/deleteListingButton" android:background="@drawable/bg_btn_curved_red_filled" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/listing_delete" android:width="250.0dip" custom:fontName="fonts/ProximaNova_Sbold.ttf" />
        </LinearLayout>
        <com.poshmark.ui.customviews.PMTextView android:textSize="15.0sp" android:textColor="@color/textColorGray" android:textColorLink="@color/textColorGray" android:gravity="center" android:id="@id/sellerPolicyTextView" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginBottom="25.0dip" android:text="@string/view_poshmark_seller_fee_policy" custom:fontName="fonts/ProximaNova_Reg.ttf" />
    </LinearLayout>
</ScrollView>