<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:background="@drawable/bg_fragment" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:custom="http://schemas.android.com/apk/res-auto">
    <LinearLayout android:id="@id/passwordLayout" android:layout_marginTop="30.0dip" style="@style/formSectionLayout">
        <com.poshmark.ui.customviews.PMEditText android:id="@id/currentPasswordText" android:hint="@string/current_password" android:maxLines="1" android:inputType="textPassword" custom:fontName="fonts/ProximaNova_Sbold.ttf" custom:required="true" custom:mode="password" custom:message="@string/invalid_current_password" style="@style/formEditText" />
        <com.poshmark.ui.customviews.PMEditText android:id="@id/newPasswordText" android:hint="@string/new_password" android:maxLines="1" android:inputType="textPassword" custom:fontName="fonts/ProximaNova_Sbold.ttf" custom:required="true" custom:mode="password" custom:message="@string/new_password_too_short_error" style="@style/formEditText" />
        <com.poshmark.ui.customviews.PMEditText android:id="@id/newPasswordCopyText" android:hint="@string/new_password_copy" android:maxLines="1" android:inputType="textPassword" custom:fontName="fonts/ProximaNova_Sbold.ttf" custom:mode="password" style="@style/formEditText" />
    </LinearLayout>
</LinearLayout>