<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:padding="20.0dip" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <ImageView android:layout_width="fill_parent" android:layout_height="100.0dip" android:src="@drawable/pinterest_connect_success" />
    <com.poshmark.ui.customviews.PMTextView android:textSize="16.0dip" android:textStyle="bold" android:textColor="@color/pinterestGreen" android:gravity="center_horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="20.0dip" android:text="@string/congrats" />
    <com.poshmark.ui.customviews.PMTextView android:textSize="16.0dip" android:textColor="@color/pinterestGreen" android:gravity="center_horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/way_to_selling_success" />
    <com.poshmark.ui.customviews.PMTextView android:textAppearance="?android:textAppearanceMedium" android:textSize="14.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="30.0dip" android:layout_marginBottom="15.0dip" android:text="@string/you_can_now" />
    <LinearLayout android:orientation="horizontal" android:paddingBottom="10.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <View android:background="@color/bgColorBlack" android:layout_width="8.0dip" android:layout_height="8.0dip" android:layout_marginTop="5.0dip" />
        <com.poshmark.ui.customviews.PMHTMLTextView android:textAppearance="?android:textAppearanceMedium" android:textSize="14.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="10.0dip" android:text="@string/pin_listings_comment1" />
    </LinearLayout>
    <LinearLayout android:orientation="horizontal" android:paddingBottom="10.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <View android:background="@color/bgColorBlack" android:layout_width="8.0dip" android:layout_height="8.0dip" android:layout_marginTop="5.0dip" />
        <com.poshmark.ui.customviews.PMHTMLTextView android:textAppearance="?android:textAppearanceMedium" android:textSize="14.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="10.0dip" android:text="@string/pin_listings_comment2" />
    </LinearLayout>
    <com.poshmark.ui.customviews.PMButton android:layout_gravity="center_horizontal" android:id="@id/gotIt_button" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="30.0dip" android:text="@string/got_it" style="@style/followFollowingButton" />
    <com.poshmark.ui.customviews.PMTextView android:textAppearance="?android:textAppearanceMedium" android:textSize="12.0dip" android:textColor="@color/textColorLightGray" android:gravity="center_horizontal" android:paddingTop="20.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/you_can_change_in_sharing_settings" />
</LinearLayout>