<?xml version="1.0" encoding="utf-8"?>
<FrameLayout android:orientation="vertical" android:background="@drawable/bg_fragment" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:custom="http://schemas.android.com/apk/res-auto">
    <ScrollView android:orientation="vertical" android:id="@id/scrollView" android:background="@drawable/bg_fragment" android:padding="0.0dip" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_margin="0.0dip"
      xmlns:android="http://schemas.android.com/apk/res/android">
        <LinearLayout android:orientation="vertical" android:paddingBottom="50.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <include android:id="@id/checkoutItemSummary" layout="@layout/checkout_item_summary" />
            <include android:id="@id/bundleCheckoutItemSummary" layout="@layout/bundle_checkout_item_summary" />
            <RelativeLayout android:id="@id/firstTimeCardLayout" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="wrap_content" style="@style/formSectionLayout">
                <com.poshmark.ui.customviews.PMTextView android:textSize="15.0sp" android:textColor="@color/textColorBlack" android:id="@id/firstTimeMsg_I" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="10.0dip" android:layout_marginBottom="5.0dip" android:text="@string/first_time_offer_msg" android:layout_alignParentLeft="true" custom:fontName="fonts/ProximaNova_Sbold.ttf" />
                <com.poshmark.ui.customviews.PMTextView android:id="@id/firstTimeMsg_II" android:layout_marginLeft="10.0dip" android:text="@string/offers_info_txt" android:singleLine="false" android:layout_below="@id/firstTimeMsg_I" android:layout_alignParentLeft="true" custom:fontName="fonts/ProximaNova_Sbold.ttf" style="@style/formSectionTitle" />
                <com.poshmark.ui.customviews.PMTextView android:textSize="13.0sp" android:textColor="@color/textColorBurgundy" android:id="@id/firstTimeMsg_InfoLink" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="10.0dip" android:layout_marginBottom="5.0dip" android:text="@string/first_time_offer_msg_link" android:layout_below="@id/firstTimeMsg_II" android:layout_alignParentLeft="true" custom:fontName="fonts/ProximaNova_Sbold.ttf" />
            </RelativeLayout>
            <com.poshmark.ui.customviews.PMTextView android:id="@id/paymentTextView" android:text="@string/payment" custom:fontName="fonts/ProximaNova_Sbold.ttf" style="@style/formSectionTitle" />
            <include android:id="@id/creditCardInfoForm" layout="@layout/credit_card_info_form" />
            <com.poshmark.ui.customviews.PMTextView android:id="@id/shipToTextView" android:text="@string/ship_to" custom:fontName="fonts/ProximaNova_Sbold.ttf" style="@style/formSectionTitle" />
            <include android:id="@id/shippingInfoForm" layout="@layout/shipping_info_form" />
        </LinearLayout>
    </ScrollView>
    <LinearLayout android:orientation="vertical" android:id="@id/bottomBarLayout" style="@style/bottomBar">
        <com.poshmark.ui.customviews.PMButton android:layout_gravity="center" android:id="@id/checkoutButton" android:text="@string/secure_checkout" custom:fontName="fonts/ProximaNova_Sbold.ttf" style="@style/commerceBlueButton" />
    </LinearLayout>
</FrameLayout>